Main page fully flexed

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -109,7 +109,7 @@
           </div>
             
         </div>
-        <div class="topSectionRight logo-right circle">
+        <div class="logo-right circle">
             <!--Here is the logo image div, image and properties set in css-->
         </div> 
       </section> 
