Finally finished, final commit, learned a lot

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <nav class="topnav">
           <ul>
-            <li><a class="navItem grow" href="#services">Services</a></li>
+            <li><a class="navItem grow" href="services.html">Services</a></li>
             <li><a class="navItem grow" href="#product">Product</a></li>
             <li><a class="navItem grow" href="#vision">Vision</a></li>
             <li><a class="navItem grow" href="#features">Features</a></li>
